force-app/unpackaged/objects/Salesforce_Requirement__c.object
<CustomObject>
    <fields>
        <fullName>Acceptance_Date__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Brief_Description__c</fullName>
        <label>Brief Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Brief_Description__c</fullName>
        <formula>Salesforce_Feature__r.Brief_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Brief Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Video_Link__c</fullName>
        <formula>IF(NOT(ISBLANK(Salesforce_Feature__r.Video_Link__c)), HYPERLINK(Salesforce_Feature__r.Video_Link__c, &quot;Click Here for Video&quot;), Null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Feature Video Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Description__c</fullName>
        <label>Full Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <formula>HYPERLINK(&quot;/lightning/r/Salesforce_Requirement__c/&quot;&amp;CASESAFEID(Id)&amp;&quot;/view&quot;,  Brief_Description__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requirement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Feature_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Salesforce_Feature__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Feature ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesforce_Feature__c</fullName>
        <label>Salesforce Feature</label>
        <referenceTo>Salesforce_Feature__c</referenceTo>
        <relationshipLabel>Salesforce Requirements</relationshipLabel>
        <relationshipName>Salesforce_Requirements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Salesforce_Requirement_ID_18_digit__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Requirement ID (18-digit)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Requirement_Status_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Video_Link__c</fullName>
        <label>Video Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WhyMinded_ID_18_digit__c</fullName>
        <label>WhyMinded ID (18-digit)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Salesforce Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Brief_Description__c</columns>
        <columns>Video_Link__c</columns>
        <columns>Full_Description__c</columns>
        <columns>Status__c</columns>
        <columns>Acceptance_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RQMT-{YYYY}{MM}{DD}-{000000000}</displayFormat>
        <label>Salesforce Requirement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Salesforce Requirements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>